cmake_minimum_required (VERSION 3.1)
project (FEAR_ClientShellDLL)

include(FindPkgConfig)

pkg_check_modules(SDL2 REQUIRED sdl2)

add_library (${PROJECT_NAME} SHARED
	src/AccuracyMgr.cpp
	src/AccuracyVisualization.cpp
	src/ActivateObjectFX.cpp
	src/AimMagnetFX.cpp
	src/AimMgr.cpp
	src/AutoTargetMgr.cpp
	src/BaseMenu.cpp
	src/BaseScreen.cpp
	src/BindMgr.cpp
	src/CameraOffsetMgr.cpp
	src/CharacterDisplay.cpp
	src/CharacterFX.cpp
	src/CheatMgr.cpp
	src/client_physics.cpp
	src/ClientConnectionMgr.cpp
	src/ClientDB.cpp
	src/ClientFXInstance.cpp
	src/ClientFXMgr.cpp
	src/ClientFXSequence.cpp
	src/ClientInfoMgr.cpp
	src/ClientMeleeCollisionController.cpp
	src/ClientNodeTrackerContext.cpp
	src/ClientPhysicsCollisionMgr.cpp
	src/ClientSaveLoadMgr.cpp
	src/ClientSoundMgr.cpp
	src/ClientSoundMixer.cpp
	src/ClientSoundNonPointFX.cpp
	src/ClientUtilities.cpp
	src/ClientVoteMgr.cpp
	src/ClientWeapon.cpp
	src/ClientWeaponMgr.cpp
	src/ClientWeaponUtils.cpp
	src/CMoveMgr.cpp
	src/ConditionalAnimationController.cpp
	src/ControlPointSFX.cpp
	src/Credits.cpp
	src/CTFFlagBaseSFX.cpp
	src/CTFFlagSFX.cpp
	src/CursorMgr.cpp
	src/CustomCtrls.cpp
	src/DamageFXMgr.cpp
	src/DebugLineFX.cpp
	src/DynamicSectorVolumeFX.cpp
	src/EntryToolLockFX.cpp
	src/ExplosionFX.cpp
	src/FinishingMoveFX.cpp
	src/FlashLight.cpp
	src/../Shared/ForceVolume.cpp
	src/ForensicObjectFX.cpp
	src/FrameStatConsoleInfo.cpp
	src/FullScreenTint.cpp
	src/GameClientShell.cpp
	src/GameRuleCtrls.cpp
	src/GameSettings.cpp
	src/GameStreamingMgr.cpp
	src/GlobalClientMgr.cpp
	src/GlobalsInit.cpp
	src/HeadBobMgr.cpp
	src/HitBox.cpp
	src/../Shared/HostOptionsMapMgr.cpp
	src/HUDActivate.cpp
	src/HUDActivateObject.cpp
	src/HUDAmmo.cpp
	src/HUDAmmoStack.cpp
	src/HUDAnimation.cpp
	src/HUDArmor.cpp
	src/HUDBar.cpp
	src/HUDBuildVersion.cpp
	src/HUDChatInput.cpp
	src/HUDControlPoint.cpp
	src/HUDControlPointBar.cpp
	src/HUDCrosshair.cpp
	src/HUDCTFBase.cpp
	src/HUDCTFFlag.cpp
	src/HUDDamageDir.cpp
	src/HUDDebug.cpp
	src/HUDDebugInput.cpp
	src/HUDDecision.cpp
	src/HUDDialogue.cpp
	src/HUDDistance.cpp
	src/HUDEndRoundMessage.cpp
	src/HUDEvidence.cpp
	src/HUDFlashlight.cpp
	src/HUDFocus.cpp
	src/HUDGear.cpp
	src/HUDGearList.cpp
	src/HUDGrenade.cpp
	src/HUDHealth.cpp
	src/HUDHealth2.cpp
	src/HUDInstinct.cpp
	src/HUDInventory.cpp
	src/HUDInventoryList.cpp
	src/HUDItem.cpp
	src/HUDMessage.cpp
	src/HUDMessageQueue.cpp
	src/HUDMeter.cpp
	src/HUDMgr.cpp
	src/HUDNavMarker.cpp
	src/HUDNavMarkerMgr.cpp
	src/HUDOverlay.cpp
	src/HUDPaused.cpp
	src/HUDPlayerList.cpp
	src/HUDRadio.cpp
	src/HUDRespawn.cpp
	src/HUDScoreDiff.cpp
	src/HUDScores.cpp
	src/HUDSlowMo.cpp
	src/HUDSonicBreath.cpp
	src/HUDSpectator.cpp
	src/HUDSprintBoost.cpp
	src/HUDSubtitles.cpp
	src/HUDSwap.cpp
	src/HUDTeamScores.cpp
	src/HUDTimer.cpp
	src/HUDTitleSafeAreaNTSC.cpp
	src/HUDToolSelect.cpp
	src/HUDTransmission.cpp
	src/HUDVote.cpp
	src/HUDWeapon.cpp
	src/HUDWeaponBreak.cpp
	src/HUDWeaponList.cpp
	src/InterfaceMgr.cpp
	src/InterfaceResMgr.cpp
	src/JumpVolumeFX.cpp
	src/LadderFX.cpp
	src/LadderMgr.cpp
	src/LayoutDB.cpp
	src/LeanMgr.cpp
	src/LightScaleMgr.cpp
	src/LoadingScreen.cpp
	src/LoadingScreenLayout.cpp
	src/MarkSFX.cpp
	src/MenuEndRound.cpp
	src/MenuMgr.cpp
	src/MenuMission.cpp
	src/MenuSystem.cpp
	src/MessageBox.cpp
	src/MissionMgr.cpp
	src/ModelDecalMgr.cpp
	src/NavMarkerFX.cpp
	src/NodeBlink.cpp
	src/NodeController.cpp
	src/objectdetector.cpp
	src/OrbitalScreenshotMgr.cpp
	src/PerformanceLog.cpp
	src/PerformanceLogMgr.cpp
	src/PerformanceMgr.cpp
	# src/../sdk/inc/performancemonitorhook.cpp
	src/PerformanceTest.cpp
	src/PhysicsCollisionSystemFX.cpp
	src/PhysicsConstraintFX.cpp
	src/PickupItemFX.cpp
	src/PlayerBodyMgr.cpp
	src/PlayerCamera.cpp
	src/PlayerLureFX.cpp
	src/PlayerMgr.cpp
	src/PlayerSoundFX.cpp
	src/PlayerStats.cpp
	src/PlayerViewAttachmentMgr.cpp
	src/PolyGridFX.cpp
	src/ProfileMgr.cpp
	src/ProjectileFX.cpp
	src/RenderTargetFX.cpp
	src/RenderTargetGroupFx.cpp
	src/ScatterFX.cpp
	src/ScmdConsoleDriver_CShell.cpp
	src/ScoresCtrl.cpp
	src/ScreenAudio.cpp
	src/ScreenConfigure.cpp
	src/ScreenControls.cpp
	src/ScreenCrosshair.cpp
	src/ScreenDisplay.cpp
	src/ScreenEffectFX.cpp
	src/ScreenFailure.cpp
	src/ScreenGame.cpp
	src/ScreenHostDownload.cpp
	src/ScreenHostVoting.cpp
	src/ScreenHostWeapons.cpp
	src/ScreenJoystick.cpp
	src/ScreenLoad.cpp
	src/ScreenMain.cpp
	src/ScreenMgr.cpp
	src/ScreenMouse.cpp
	src/ScreenMutePlayer.cpp
	src/ScreenOptions.cpp
	src/ScreenPerformance.cpp
	src/ScreenPerformanceAdvanced.cpp
	src/ScreenPerformanceCPU.cpp
	src/ScreenPerformanceGPU.cpp
	src/ScreenPlayer.cpp
	src/ScreenPlayerLoadout.cpp
	src/ScreenPlayerTeam.cpp
	src/ScreenPostload.cpp
	src/ScreenPreload.cpp
	src/ScreenProfile.cpp
	src/ScreenSave.cpp
	src/ScreenSingle.cpp
	src/ScreenTeam.cpp
	src/ScreenTintMgr.cpp
	src/ScreenVote.cpp
	src/ScreenWeapons.cpp
	src/SearchLightFX.cpp
	src/SFXMgr.cpp
	src/ShatterEffect.cpp
	src/ShatterEffectMgr.cpp
	src/ShellCasingFX.cpp
	src/SnowFX.cpp
	src/SpecialFXList.cpp
	src/SpecialFXNotifyMessageHandler.cpp
	src/SpecialMoveFX.cpp
	src/SpecialMoveMgr.cpp
	src/Stdafx.cpp
	src/TargetMgr.cpp
	src/TeamClientFXSFX.cpp
	src/TriggerFX.cpp
	src/TurretFX.cpp
	src/UserNotificationMgr.cpp
	src/UserNotifiers.cpp
	src/VehicleMgr.cpp
	src/VKDefs.cpp
	src/VolumetricLightFX.cpp
	src/WeaponDisplay.cpp
	src/WeaponFX.cpp
	src/Game_ClientShell.rc
	#Win32
	src/ScreenHost.cpp
	src/ScreenHostLevels.cpp
	src/ScreenHostOptionFile.cpp
	src/ScreenHostOptions.cpp
	src/ScreenMulti.cpp
	src/ServerBrowserCtrl.cpp)
set_target_properties(${PROJECT_NAME} 
	PROPERTIES OUTPUT_NAME CShell)

if(MSVC)
add_definitions (-D_CRT_SECURE_NO_WARNINGS -D_CLIENTBUILD -DMEMTRACK_CLIENT)
endif(MSVC)

include_directories (../Shared 
	../../sdk/inc
	../../libs/MFCStub
	../../libs/stdlith
	../../libs/ButeMgr
	../../libs/CryptMgr
	../../libs/WONAPI
	../../libs/lith
	../libs/RegMgr
	../libs/LTGUIMgr
	#../libs/ServerDir
	../ClientRes
	${SDL2_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME}
	MFCStub
	Lib_StdLith
	ButeMgr
	CryptMgr
	Lib_Lith
	RegMgr
	LTGUIMgr
	LIB_WONAPI
	ServerDir
	#winmm.lib
	${SDL2_LIBRARIES})